<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".CreateNewHikeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/obsBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_your_observation"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/t24"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/observation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lines="4"
                android:overScrollMode="always"
                android:gravity="start"
                android:paddingTop="8dp"
                android:background="@drawable/edit_text"
                android:hint="@string/observation"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/observationTime"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:overScrollMode="always"
                android:gravity="start"
                android:paddingTop="8dp"
                android:background="@drawable/edit_text"
                android:hint="@string/time_of_observation"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/additionalComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:lines="4"
                android:overScrollMode="always"
                android:gravity="start"
                android:paddingTop="8dp"
                android:background="@drawable/edit_text"
                android:hint="@string/additional_comments"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/obSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn2"
                android:text="@string/save"
                android:textAllCaps="false"
                android:layout_marginTop="16dp"
                android:textColor="@color/white" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>