<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/primaryColor"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_m_hike"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textSize="@dimen/t24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createNewHikeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn"
            android:text="@string/create_hike"
            android:textAllCaps="false"
            android:textColor="@color/black" />

    </LinearLayout>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:iconifiedByDefault="false"
        android:padding="0dp"
        app:queryHint="Search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/hikesList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp" />

    <RelativeLayout
        android:id="@+id/noHikeListLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createHikeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn"
            android:text="@string/create_hike"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/createHikeButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/create_some_hikes"
            android:textSize="16sp" />

    </RelativeLayout>


</LinearLayout>